[gd_scene load_steps=5 format=3 uid="uid://do566ru33rr8g"]

[ext_resource type="Theme" uid="uid://6xg4psw20cf3" path="res://assests/themes/menu.tres" id="1_1dggd"]
[ext_resource type="Script" uid="uid://cw4wtdc7530qx" path="res://scripts/settings.gd" id="1_rbmmp"]
[ext_resource type="FontFile" uid="uid://cp24x3ocgy48h" path="res://assests/fonts/PixelOperator8.ttf" id="2_46duy"]
[ext_resource type="Script" uid="uid://b1asma5tspkd8" path="res://scripts/h_slider.gd" id="3_46duy"]

[node name="Settings" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1dggd")
script = ExtResource("1_rbmmp")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_46duy")
text = "Back"

[node name="Difficulty" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Change Difficulty"

[node name="Volume" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_46duy")
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
value = 50.0
script = ExtResource("3_46duy")

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
